<?xml version="1.0"?>
<package>
  <name>upkie_description</name>
  <version>1.5.0</version>
  <description>Description package for the Upkie wheeled biped robot</description>
  <author>Stéphane Caron</author>
  <maintainer email="stephane.caron@normalesup.org">Stéphane Caron</maintainer>
  <license>Apache 2.0</license>
  <url>https://github.com/upkie/upkie_description</url>
  <buildtool_depend>catkin</buildtool_depend>
</package>
